--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "framer-motion": "^6.3.4",
+    "quill": "^1.3.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.4"
